<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="right">

    <TextView
        android:id="@+id/textAED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:hint="@string/text_AED_hint"
        android:textSize="48sp"/>
    <TextView
        android:id="@+id/textBDPNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/text_bdp_number_hint"
        android:textSize="48sp"/>
    <TextView
        android:id="@+id/decimalPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_dp_hint"
        android:textSize="48sp"/>
    <TextView
        android:id="@+id/textADPNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_adp_number_hint"
        android:textSize="48sp"/>

</LinearLayout>