<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/numberScreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/btn1"
                android:text="@string/button_1"
                android:gravity="center"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />

            <TextView
                android:id="@+id/btn2"
                android:text="@string/button_2"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />

            <TextView
                android:id="@+id/btn3"
                android:text="@string/button_3"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/btn4"
                android:text="@string/button_4"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />

            <TextView
                android:id="@+id/btn5"
                android:text="@string/button_5"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />

            <TextView
                android:id="@+id/btn6"
                android:text="@string/button_6"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/btn7"
                android:text="@string/button_7"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />

            <TextView
                android:id="@+id/btn8"
                android:text="@string/button_8"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />

            <TextView
                android:id="@+id/btn9"
                android:text="@string/button_9"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/btn0"
                android:text="@string/button_0"
                android:background="@drawable/buttom_background"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:onClick="pressingKeyboard"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/btnDecimal"
            android:text="@string/button_decimal"
            android:background="@drawable/buttom_background"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:onClick="pressingKeyboard"
            />
        <TextView
            android:id="@+id/btnDelete"
            android:text="@string/button_delete"
            android:background="@drawable/buttom_background"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:onClick="pressingKeyboard"
            />
    </LinearLayout>

</LinearLayout>